[FIXED] changed alignment of picedit tools(old avatar editor)

--- a/static/plugins/picedit/css/picedit.css
+++ b/static/plugins/picedit/css/picedit.css
@@ -103,7 +103,7 @@
     height: 200px;
     color: #aaa;
     margin-top: 30px;
-	margin-bottom: 10px;
+	margin-bottom: 50px;
 }
 .picedit_canvas_box:hover .picedit_action_btns, .picedit_action_btns.active {
 	z-index: 8;
@@ -281,20 +281,13 @@
 }
 .picedit_action_btns {
 	font-size: 3em;
-	color: #ddd;
 	width: 60%;
-	height: 50%;
+	height: 15%;
 	display: inline-table;
-	margin: 12% auto 0% auto;
 	position: relative;
-	opacity: 0;
-
+	opacity: 1;
+	top: 100%;
 	z-index: 4;
-	-webkit-transition: all 200ms ease-in-out;
-	-moz-transition: all 200ms ease-in-out;
-	-ms-transition: all 200ms ease-in-out;
-	-o-transition: all 200ms ease-in-out;
-	transition: all 200ms ease-in-out;
 }
 .picedit_action_btns > div {
     display: table-cell;
